# aipac

./: app.py  main.py  pyproject.toml  readme.md
aipac/: constants.py  extract.py  gcp_client.py
config/: logger.py
